# algorithm

./: CMakeLists.txt  README.md  diary
base/: 01Trie.cpp  ListNode.cpp  NodeSegTree.cpp  SegmentTree.cpp  TreeNode.cpp  Trie.cpp  UF.cpp  cdq_dc.cpp  dsu.cpp  kmp.cpp  math.cpp  moer_vote.cpp  num_dp.cpp  ordered_set.cpp  pre_sum.cpp  quickPow.cpp  s_table.cpp  str.cpp  test.cpp  tree_hash.cpp  xor_base.cpp  xor_hash.cpp
base/bignum_calculate/: add.cpp  division_1.cpp  mul.cpp  reduce.cpp
base/graph/: dijkstra.cpp  floyd.cpp  lca.cpp  tarjan.cpp  topol_sort.cpp  two-sat.cpp
luogu/bfs/:  CF1005F.cpp   CF1272E.cpp   CF1283D.cpp   CF1520G.cpp   CF1579F.cpp   CF1650G.cpp  CF1065D.cpp  CF1272F.cpp  CF1714D.cpp  CF1775D.cpp  CF1840F.cpp  CF1933F.cpp  CF1941G.cpp  CF954D.cpp  LC3666.cpp  LC3690.cpp
luogu/binary_search/:  AT_abc155_d.cpp   CF1066D.cpp   CF1077D.cpp   CF1165F2.cpp   CF1183C.cpp   CF1385C.cpp   CF1443C.cpp   CF1490E.cpp   CF1490G.cpp   CF1610C.cpp   CF1619D.cpp   CF1624D.cpp   CF1730B.cpp   CF1837F.cpp   CF1843E.cpp   CF1907D.cpp   CF1946C.cpp   CF460C.cpp   CF702C.cpp   CF750C.cpp  ABC215F.cpp  AT_abc311_e.cpp  AT_abc336_d.cpp  AT_abc346_f.cpp  CF1073C.cpp  CF1118D2.cpp  CF1367F1.cpp  CF1623C.cpp  CF1679D.cpp  CF1783C.cpp  CF1840D.cpp  CF1853C.cpp  CF1856C.cpp  CF1883G2.cpp  CF1923D.cpp  CF1933E.cpp  CF1971E.cpp  CF1985F.cpp  CF1996F.cpp  CF2009E.cpp  (+18 more)
luogu/bitmasks/:  AT_abc347_d.cpp   CF1095C.cpp   CF1624G.cpp   CF1790E.cpp   CF1800F.cpp   CF1872E.cpp   CF1946D.cpp   CF1968F.cpp  CF1491D.cpp  CF1554C.cpp  (+12 more)
test/: beautifulArray.cpp  luogu.cpp  solve.cpp
(+1950 files in other folders)
